# super_db

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.planning/: PROJECT.md  config.json
scripts/: demo.py
src/super_db/: db.py
src/super_db/catalog/: catalog.py  schema.py
src/super_db/cli/: main.py
src/super_db/common/: constants.py  durability.py  errors.py  log.py
src/super_db/index/: bplustree.py  node_layout.py
src/super_db/render/: plain_renderer.py  protocol.py  rich_renderer.py
src/super_db/storage/: engine.py  heap_file.py  page.py  page_layout.py  rid.py  row.py  tuple_codec.py
src/superdb/: bplustree.py  catalog.py  cli.py  cli_db.py  cli_index.py  cli_page.py  cli_row.py  cli_sql.py  cli_table.py  database.py  durability.py  engine.py  errors.py  evaluate.py  executor.py  heap_file.py  logical_plan.py  node_layout.py  page.py  page_layout.py  plain_renderer.py  renderer.py  rich_renderer.py  rid.py  row.py  sql_parser.py  tuple_codec.py
src/superdb/catalog/: catalog.py
src/superdb/cli/: cli.py  cli_common.py  cli_db.py  (+13 more)
tests/: conftest.py  test_bplustree.py  test_catalog.py  test_cli.py  test_common.py  test_db_init.py  test_durability.py  test_e2e_scenario.py  test_engine.py  test_executor.py  test_heap_file.py  test_index_engine.py  test_logical_plan.py  test_mutations.py  test_page.py  test_page_index_cli.py  test_renderer_firewall.py  test_renderers.py  test_row_cli.py  test_scan.py  test_schema.py  test_smoke.py  test_sql_parser.py  test_table_cli.py  test_tuple_codec.py  test_v5_features.py  test_viz.py
(+24 files in other folders)
